--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <a href="index.html">
-        <img src="public/img/mercedes-benz.svg" alt="Mercedes Icon" height="30" width="30">
+        <img src="./public/img/mercedes-benz.svg" alt="Mercedes Icon" height="30" width="30">
       </a>
       <nav>
         <ul class="pc-menu">
@@ -20,9 +20,9 @@
           <li>Stores</li>
         </ul>
         <ul class="side-menu">
-          <li><a href="#"><img src="public/img/user.svg" alt="user icon"></a></li>
-          <li><a href="#"><img src="public/img/shopping-bag.svg" alt="bag icon"></a></li>
-          <li><a href="#"><img src="public/img/burger1.svg" alt="menu icon" id="burger-menu"></a></li>
+          <li><a href="#"><img src="./public/img/user.svg" alt="user icon"></a></li>
+          <li><a href="#"><img src="./public/img/shopping-bag.svg" alt="bag icon"></a></li>
+          <li><a href="#"><img src="./public/img/burger1.svg" alt="menu icon" id="burger-menu"></a></li>
         </ul>
       </nav>
     </header>
@@ -36,7 +36,7 @@
       <article class="cars-card">
         <h3 class="cars-card-type">Electric</h3>
         <p class="cars-card-model">Mercedes E450 Cabriolet</p>
-        <img src="public/img/electric.png" alt="Merces E450 Cabriolet">
+        <img src="./public/img/electric.png" alt="Merces E450 Cabriolet">
         <div class="cars-card-controls">
           <a href="#" class="info-button">More info</a>
           <div class="color-selector">
@@ -50,7 +50,7 @@
       <article class="cars-card">
         <h3 class="cars-card-type">Hybrid</h3>
         <p class="cars-card-model">Mercedes GLC SUV</p>
-        <img src="public/img/glc-suv.png" alt="Mercedes GLC Suv">
+        <img src="./public/img/glc-suv.png" alt="Mercedes GLC Suv">
         <div class="cars-card-controls">
           <a href="#" class="info-button">More info</a>
           <div class="color-selector">
@@ -63,7 +63,7 @@
       <article class="cars-card">
         <h3 class="cars-card-type">Hybrid</h3>
         <p class="cars-card-model">Merces Benz-G-Class</p>
-        <img src="public/img/gclass.png" alt="Mercedes GLC Suv">
+        <img src="./public/img/gclass.png" alt="Mercedes GLC Suv">
         <div class="cars-card-controls">
           <a href="#" class="info-button">More info</a>
           <div class="color-selector">
@@ -76,7 +76,7 @@
       <article class="cars-card">
         <h3 class="cars-card-type">Electric</h3>
         <p class="cars-card-model">Merces GLC SUV</p>
-        <img src="public/img/mercedesglc.png" alt="Mercedes GLC Suv">
+        <img src="./public/img/mercedesglc.png" alt="Mercedes GLC Suv">
         <div class="cars-card-controls">
           <a href="#" class="info-button">More info</a>
           <div class="color-selector">
@@ -100,22 +100,22 @@
     <section class="items">
       <article class="item">
         <h3>Confort</h3>
-        <img src="public/img/confort.jpg" alt="confort">
+        <img src="./public/img/confort.jpg" alt="confort">
         <a href="#" class="info-button">More info</a>
       </article>
       <article class="item">
         <h3>Technology</h3>
-        <img src="public/img/technology.png" alt="technology">
+        <img src="./public/img/technology.png" alt="technology">
         <a href="#" class="info-button">More info</a>
       </article>
       <article class="item">
         <h3>Accesories</h3>
-        <img src="public/img/accesories.jpg" alt="accesories">
+        <img src="./public/img/accesories.jpg" alt="accesories">
         <a href="#" class="info-button">More info</a>
       </article>
     </section>
     <section class="destacado">
-      <img src="public/img/maybach.png" alt="maybach-red">
+      <img src="./public/img/maybach.png" alt="maybach-red">
       <div class="destacado_text">
         <h2>Red as tentation</h2>
         <p>Good design is what drives us, and we're
@@ -127,7 +127,7 @@
     </section>
     <section class="destacado2">
       <h2>The Mercedes-Maybach wheel programme</h2>
-      <img src="public/img/wheel.png" alt="Mercedes-Maybach">
+      <img src="./public/img/wheel.png" alt="Mercedes-Maybach">
       <div class="destacado2-info">
         <p>The exclusive Mercedes-Maybach wheel programme, e.g. with optional 53.3 cm (21") Maybach forged wheels in multi-spoke design.</p>
         <a href="#">Learn more</a>
@@ -154,19 +154,19 @@
         </form>
         <div class="rrss">
           <a href="#" class="rrss-icon">
-            <img src="public/img/facebook.svg" alt="facebook icon">
+            <img src="./public/img/facebook.svg" alt="facebook icon">
           </a>
           <a href="#" class="rrss-icon">
-            <img src="public/img/insta.svg" alt="instagram icon">
+            <img src="./public/img/insta.svg" alt="instagram icon">
           </a>
           <a href="#" class="rrss-icon">
-            <img src="public/img/youtube.svg" alt="youtube icon">
+            <img src="./public/img/youtube.svg" alt="youtube icon">
           </a>
           <a href="#" class="rrss-icon">
-            <img src="public/img/linkedin.svg" alt="linkedin icon">
+            <img src="./public/img/linkedin.svg" alt="linkedin icon">
           </a>
           <a href="#" class="rrss-icon">
-            <img src="public/img/tiktok.svg" alt="tiktok icon">
+            <img src="./public/img/tiktok.svg" alt="tiktok icon">
           </a>
         </div>
       </div>
