Añadir etiquetas SEO, modificar comportamiento de la section Items

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercedes-Benz</title>
+    <meta name="description" content="Descubre la gama completa de vehículos Mercedes-Benz: coches de lujo, deportivos AMG, SUV y eléctricos EQS. Tecnología innovadora, diseño elegante y máximo confort. Concesionarios oficiales en España."/>
+    <meta name="keywords" content="Mercedes-Benz, coches de lujo, vehículos premium, AMG, SUV Mercedes, coches eléctricos, EQS, concesionarios mercedes España, coches alemanes">
   </head>
   <body>
     <header>
@@ -26,118 +28,120 @@
         </ul>
       </nav>
     </header>
-    <section class="hero">
-      <div class="hero-info">
-        <h1>New Mercedes GLS</h1>
-        <p>the power in your hands</p>
-      </div>
-    </section>
-    <section class="cars">
-      <article class="cars-card">
-        <h3 class="cars-card-type">Electric</h3>
-        <p class="cars-card-model">Mercedes E450 Cabriolet</p>
-        <img src="/img/electric.png" alt="Merces E450 Cabriolet">
-        <div class="cars-card-controls">
-          <a href="#" class="info-button">More info</a>
-          <div class="color-selector">
-            <span class="cars-card-colors grey"></span>
-            <span class="cars-card-colors red"></span>
-            <span class="cars-card-colors blue"></span>
-            <span class="cars-card-colors black"></span>
+    <main>
+      <section class="hero">
+        <div class="hero-info">
+          <h1>New Mercedes GLS</h1>
+          <p>the power in your hands</p>
+        </div>
+      </section>
+      <section class="cars">
+        <article class="cars-card">
+          <h3 class="cars-card-type">Electric</h3>
+          <p class="cars-card-model">Mercedes E450 Cabriolet</p>
+          <img src="/img/electric.png" alt="Merces E450 Cabriolet">
+          <div class="cars-card-controls">
+            <a href="#" class="info-button">More info</a>
+            <div class="color-selector">
+              <span class="cars-card-colors grey"></span>
+              <span class="cars-card-colors red"></span>
+              <span class="cars-card-colors blue"></span>
+              <span class="cars-card-colors black"></span>
+            </div>
+          </div>       
+        </article>
+        <article class="cars-card">
+          <h3 class="cars-card-type">Hybrid</h3>
+          <p class="cars-card-model">Mercedes GLC SUV</p>
+          <img src="/img/glc-suv.png" alt="Mercedes GLC Suv">
+          <div class="cars-card-controls">
+            <a href="#" class="info-button">More info</a>
+            <div class="color-selector">
+              <span class="cars-card-colors black"></span>
+              <span class="cars-card-colors yellow"></span>
+              <span class="cars-card-colors grey"></span>
+            </div>
+          </div>   
+        </article>
+        <article class="cars-card">
+          <h3 class="cars-card-type">Hybrid</h3>
+          <p class="cars-card-model">Merces Benz-G-Class</p>
+          <img src="/img/gclass.png" alt="Mercedes GLC Suv">
+          <div class="cars-card-controls">
+            <a href="#" class="info-button">More info</a>
+            <div class="color-selector">
+              <span class="cars-card-colors black"></span>
+              <span class="cars-card-colors violet"></span>
+              <span class="cars-card-colors wine"></span>
+            </div>
           </div>
-        </div>       
-      </article>
-      <article class="cars-card">
-        <h3 class="cars-card-type">Hybrid</h3>
-        <p class="cars-card-model">Mercedes GLC SUV</p>
-        <img src="/img/glc-suv.png" alt="Mercedes GLC Suv">
-        <div class="cars-card-controls">
-          <a href="#" class="info-button">More info</a>
-          <div class="color-selector">
-            <span class="cars-card-colors black"></span>
-            <span class="cars-card-colors yellow"></span>
-            <span class="cars-card-colors grey"></span>
+        </article>
+        <article class="cars-card">
+          <h3 class="cars-card-type">Electric</h3>
+          <p class="cars-card-model">Merces GLC SUV</p>
+          <img src="/img/mercedesglc.png" alt="Mercedes GLC Suv">
+          <div class="cars-card-controls">
+            <a href="#" class="info-button">More info</a>
+            <div class="color-selector">
+              <span class="cars-card-colors black"></span>
+              <span class="cars-card-colors yellow"></span>
+              <span class="cars-card-colors red"></span>
+            </div>
           </div>
-        </div>   
-      </article>
-      <article class="cars-card">
-        <h3 class="cars-card-type">Hybrid</h3>
-        <p class="cars-card-model">Merces Benz-G-Class</p>
-        <img src="/img/gclass.png" alt="Mercedes GLC Suv">
-        <div class="cars-card-controls">
-          <a href="#" class="info-button">More info</a>
-          <div class="color-selector">
-            <span class="cars-card-colors black"></span>
-            <span class="cars-card-colors violet"></span>
-            <span class="cars-card-colors wine"></span>
+        </article>
+      </section>
+      <section class="location">
+        <h2>Find your nearest Mercedes dealer you.</h2>
+        <p>Browse over 1000 dealers worldwide, and find the one that best suits your situation.</p>
+        <div class="location-cta">
+          <div>
+            <h3>Discover your local Mercedes partner store</h3>
+            <a href="https://www.mercedes-benz.es/passengercars/mercedes-benz-cars/dealer-locator.html" target="_blank">Find a partner store near you</a>
           </div>
         </div>
-      </article>
-      <article class="cars-card">
-        <h3 class="cars-card-type">Electric</h3>
-        <p class="cars-card-model">Merces GLC SUV</p>
-        <img src="/img/mercedesglc.png" alt="Mercedes GLC Suv">
-        <div class="cars-card-controls">
+      </section>
+      <section class="items">
+        <article class="item">
+          <h3>Confort</h3>
+          <img src="./public/img/confort.jpg" alt="confort">
           <a href="#" class="info-button">More info</a>
-          <div class="color-selector">
-            <span class="cars-card-colors black"></span>
-            <span class="cars-card-colors yellow"></span>
-            <span class="cars-card-colors red"></span>
-          </div>
+        </article>
+        <article class="item">
+          <h3>Technology</h3>
+          <img src="./public/img/technology.png" alt="technology">
+          <a href="#" class="info-button">More info</a>
+        </article>
+        <article class="item">
+          <h3>Accesories</h3>
+          <img src="./public/img/accesories.jpg" alt="accesories">
+          <a href="#" class="info-button">More info</a>
+        </article>
+      </section>
+      <section class="destacado">
+        <img src="./public/img/maybach.png" alt="maybach-red">
+        <div class="destacado_text">
+          <h2>Red as tentation</h2>
+          <p>Good design is what drives us, and we're
+          proud to share that Mercedes-Maybach has
+          already won the prestigious Best Design 
+          Award 2023, as judged by the world's best
+          product designers.</p>
         </div>
-      </article>
-    </section>
-    <section class="location">
-      <h2>Find your nearest Mercedes dealer you.</h2>
-      <p>Browse over 1000 dealers worldwide, and find the one that best suits your situation.</p>
-      <div class="location-cta">
-        <div>
-          <h3>Discover your local Mercedes partner store</h3>
-          <a href="#">Find a partner store near you</a>
+      </section>
+      <section class="destacado2">
+        <h2>The Mercedes-Maybach wheel programme</h2>
+        <img src="./img/wheel.png" alt="Mercedes-Maybach">
+        <div class="destacado2-info">
+          <p>The exclusive Mercedes-Maybach wheel programme, e.g. with optional 53.3 cm (21") Maybach forged wheels in multi-spoke design.</p>
+          <a href="#">Learn more</a>
         </div>
-      </div>
-    </section>
-    <section class="items">
-      <article class="item">
-        <h3>Confort</h3>
-        <img src="./public/img/confort.jpg" alt="confort">
-        <a href="#" class="info-button">More info</a>
-      </article>
-      <article class="item">
-        <h3>Technology</h3>
-        <img src="./public/img/technology.png" alt="technology">
-        <a href="#" class="info-button">More info</a>
-      </article>
-      <article class="item">
-        <h3>Accesories</h3>
-        <img src="./public/img/accesories.jpg" alt="accesories">
-        <a href="#" class="info-button">More info</a>
-      </article>
-    </section>
-    <section class="destacado">
-      <img src="./public/img/maybach.png" alt="maybach-red">
-      <div class="destacado_text">
-        <h2>Red as tentation</h2>
-        <p>Good design is what drives us, and we're
-        proud to share that Mercedes-Maybach has
-        already won the prestigious Best Design 
-        Award 2023, as judged by the world's best
-        product designers.</p>
-      </div>
-    </section>
-    <section class="destacado2">
-      <h2>The Mercedes-Maybach wheel programme</h2>
-      <img src="./img/wheel.png" alt="Mercedes-Maybach">
-      <div class="destacado2-info">
-        <p>The exclusive Mercedes-Maybach wheel programme, e.g. with optional 53.3 cm (21") Maybach forged wheels in multi-spoke design.</p>
-        <a href="#">Learn more</a>
-      </div>
-    </section>
-    <section class="contacto">
-      <p>Ready to own the car of your dreams?. Mercedes-Maybach are now available in
-        available at our dealers by appointment only.</p>
-      <a href="#">Contact now</a>
-    </section>
+      </section>
+      <section class="contacto">
+        <p>Ready to own the car of your dreams?. Mercedes-Maybach are now available in
+          available at our dealers by appointment only.</p>
+        <a href="#">Contact now</a>
+      </section>
+    </main>
     <footer>
       <div class="socials">
         <h3>Join the power</h3>
