Fix rutas de imagenes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/mercedes-benz.svg" />
+    <link rel="icon" type="image/svg+xml" href=".public/img/mercedes-benz.svg" />
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercedes-Benz</title>
@@ -39,7 +39,7 @@
         <article class="cars-card">
           <h3 class="cars-card-type">Electric</h3>
           <p class="cars-card-model">Mercedes E450 Cabriolet</p>
-          <img src="/img/electric.png" alt="Merces E450 Cabriolet">
+          <img src="./public/img/electric.png" alt="Merces E450 Cabriolet">
           <div class="cars-card-controls">
             <a href="#" class="info-button">More info</a>
             <div class="color-selector">
@@ -53,7 +53,7 @@
         <article class="cars-card">
           <h3 class="cars-card-type">Hybrid</h3>
           <p class="cars-card-model">Mercedes GLC SUV</p>
-          <img src="/img/glc-suv.png" alt="Mercedes GLC Suv">
+          <img src="./public/img/glc-suv.png" alt="Mercedes GLC Suv">
           <div class="cars-card-controls">
             <a href="#" class="info-button">More info</a>
             <div class="color-selector">
@@ -66,7 +66,7 @@
         <article class="cars-card">
           <h3 class="cars-card-type">Hybrid</h3>
           <p class="cars-card-model">Merces Benz-G-Class</p>
-          <img src="/img/gclass.png" alt="Mercedes GLC Suv">
+          <img src="./public/img/gclass.png" alt="Mercedes GLC Suv">
           <div class="cars-card-controls">
             <a href="#" class="info-button">More info</a>
             <div class="color-selector">
@@ -79,7 +79,7 @@
         <article class="cars-card">
           <h3 class="cars-card-type">Electric</h3>
           <p class="cars-card-model">Merces GLC SUV</p>
-          <img src="/img/mercedesglc.png" alt="Mercedes GLC Suv">
+          <img src="./public/img/mercedesglc.png" alt="Mercedes GLC Suv">
           <div class="cars-card-controls">
             <a href="#" class="info-button">More info</a>
             <div class="color-selector">
@@ -130,7 +130,7 @@
       </section>
       <section class="destacado2">
         <h2>The Mercedes-Maybach wheel programme</h2>
-        <img src="./img/wheel.png" alt="Mercedes-Maybach">
+        <img src="./public/img/wheel.png" alt="Mercedes-Maybach">
         <div class="destacado2-info">
           <p>The exclusive Mercedes-Maybach wheel programme, e.g. with optional 53.3 cm (21") Maybach forged wheels in multi-spoke design.</p>
           <a href="#">Learn more</a>
