Añadir enlaces a productos reales y modificaciones de estilos varias

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercedes-Benz</title>
-    <meta name="description" content="Descubre la gama completa de vehículos Mercedes-Benz: coches de lujo, deportivos AMG, SUV y eléctricos EQS. Tecnología innovadora, diseño elegante y máximo confort. Concesionarios oficiales en España."/>
-    <meta name="keywords" content="Mercedes-Benz, coches de lujo, vehículos premium, AMG, SUV Mercedes, coches eléctricos, EQS, concesionarios mercedes España, coches alemanes">
+    <meta name="description" content="Descubre la gama completa de vehículos Mercedes-Benz: coches de lujo, deportivos AMG, SUV y eléctricos EQS. Tecnología innovadora, diseño elegante y máximo confort. Concesionarios oficiales en España." />
+    <meta name="keywords" content="Mercedes-Benz, coches de lujo, vehículos premium, AMG, SUV Mercedes, coches eléctricos, EQS, concesionarios mercedes España, coches alemanes" />
   </head>
   <body>
     <header>
@@ -41,7 +41,7 @@
           <p class="cars-card-model">Mercedes E450 Cabriolet</p>
           <img src="./public/img/electric.png" alt="Merces E450 Cabriolet">
           <div class="cars-card-controls">
-            <a href="#" class="info-button">More info</a>
+            <a href="https://www.mercedes-benz.es/passengercars/models/cabriolet-roadster/cle/overview.html" class="info-button" target="_blank">More info</a>
             <div class="color-selector">
               <span class="cars-card-colors grey"></span>
               <span class="cars-card-colors red"></span>
@@ -55,7 +55,7 @@
           <p class="cars-card-model">Mercedes GLC SUV</p>
           <img src="./public/img/glc-suv.png" alt="Mercedes GLC Suv">
           <div class="cars-card-controls">
-            <a href="#" class="info-button">More info</a>
+            <a href="https://www.mercedes-benz.es/passengercars/models/suv/glc/overview.html" class="info-button" target="_blank">More info</a>
             <div class="color-selector">
               <span class="cars-card-colors black"></span>
               <span class="cars-card-colors yellow"></span>
@@ -68,7 +68,7 @@
           <p class="cars-card-model">Merces Benz-G-Class</p>
           <img src="./public/img/gclass.png" alt="Mercedes GLC Suv">
           <div class="cars-card-controls">
-            <a href="#" class="info-button">More info</a>
+            <a href="https://www.mercedes-benz.es/passengercars/models/suv/g-class/overview.html" class="info-button" target="_blank">More info</a>
             <div class="color-selector">
               <span class="cars-card-colors black"></span>
               <span class="cars-card-colors violet"></span>
@@ -81,7 +81,7 @@
           <p class="cars-card-model">Merces GLC SUV</p>
           <img src="./public/img/mercedesglc.png" alt="Mercedes GLC Suv">
           <div class="cars-card-controls">
-            <a href="#" class="info-button">More info</a>
+            <a href="https://www.mercedes-benz.es/passengercars/models/cabriolet-roadster/mercedes-maybach-sl/overview.html" class="info-button" target="_blank">More info</a>
             <div class="color-selector">
               <span class="cars-card-colors black"></span>
               <span class="cars-card-colors yellow"></span>
